# esp32-no_std-playground

./: .gitignore  Cargo.toml  diagram.json  wokwi.toml
src/: characters.rs
