[package]
edition = "2021"
name    = "your-esp32-project"
version = "0.1.0"

[[bin]]
name = "your-esp32-project"
path = "./src/bin/main.rs"

[dependencies]
critical-section = "1.2.0"
esp-alloc = { version = "0.6.0", default-features = false }
esp-backtrace = { version = "0.15.1", features = ["esp32", "println"] }
esp-hal = { version = "0.23.0", features = ["esp32"] }
esp-println = { version = "0.13.1", features = ["esp32", "log"] }
esp-wifi = { version = "0.12.0", features = ["esp32", "wifi", "esp-alloc", "sniffer"] }
ieee80211 = { version = "0.4.0", default-features = false }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = 3

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 3
overflow-checks  = false
